--- a/nibbler.cbp
+++ b/nibbler.cbp
@@ -11,30 +11,30 @@
 				<Option working_dir="/Users/alexandreroulin/work/nibbler"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="rebuild_cache">
 				<Option working_dir="/Users/alexandreroulin/work/nibbler"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="edit_cache">
 				<Option working_dir="/Users/alexandreroulin/work/nibbler"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="nibbler">
@@ -45,14 +45,44 @@
 				<Option compiler="gcc"/>
 				<Compiler>
 					<Add directory="/Users/alexandreroulin/work/nibbler/class"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/component"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/events"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/factory"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/gui"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/gui/widget"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/component"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/entities"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/events"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/managers"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/systems"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/utils"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/network"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/systems"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/commun"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/display_sdl/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/display_sfml/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/sound_sdl/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/sound_sfml/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/imgui-sfml"/>
 					<Add directory="/Users/alexandreroulin/work/nibbler/incs"/>
 					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/include/json"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/src/lib_json"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/src/test_lib_json"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/include/c++/v1"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/include"/>
+					<Add directory="/usr/include"/>
+					<Add directory="/System/Library/Frameworks"/>
+					<Add directory="/Library/Frameworks"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 nibbler"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 nibbler"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="nibbler/fast">
@@ -63,14 +93,44 @@
 				<Option compiler="gcc"/>
 				<Compiler>
 					<Add directory="/Users/alexandreroulin/work/nibbler/class"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/component"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/events"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/factory"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/gui"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/gui/widget"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/component"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/entities"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/events"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/managers"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/systems"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/KNU/utils"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/network"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/class/systems"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/commun"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/display_sdl/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/display_sfml/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/sound_sdl/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/externlib/sound_sfml/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/imgui-sfml"/>
 					<Add directory="/Users/alexandreroulin/work/nibbler/incs"/>
 					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/include"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/include/json"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/src/lib_json"/>
+					<Add directory="/Users/alexandreroulin/work/nibbler/jsoncpp/src/test_lib_json"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/include/c++/v1"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include"/>
+					<Add directory="/Library/Developer/CommandLineTools/usr/include"/>
+					<Add directory="/usr/include"/>
+					<Add directory="/System/Library/Frameworks"/>
+					<Add directory="/Library/Frameworks"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 nibbler/fast"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 nibbler/fast"/>
+					<CompileFile command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j8 -f &quot;/Users/alexandreroulin/work/nibbler/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
@@ -272,6 +332,12 @@
 		<Unit filename="/Users/alexandreroulin/work/nibbler/class/network/ServerTCP.hpp">
 			<Option target="nibbler"/>
 		</Unit>
+		<Unit filename="/Users/alexandreroulin/work/nibbler/class/network/UtilsTCP.cpp">
+			<Option target="nibbler"/>
+		</Unit>
+		<Unit filename="/Users/alexandreroulin/work/nibbler/class/network/UtilsTCP.hpp">
+			<Option target="nibbler"/>
+		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/class/network/chat_message.hpp">
 			<Option target="nibbler"/>
 		</Unit>
@@ -317,16 +383,10 @@
 		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/display_sdl/src/DisplaySdl.cpp">
 			<Option target="nibbler"/>
 		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/display_sdl/src/main.cpp">
-			<Option target="nibbler"/>
-		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/display_sfml/include/DisplaySfml.hpp">
 			<Option target="nibbler"/>
 		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/display_sfml/src/DisplaySfml.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/display_sfml/src/main.cpp">
 			<Option target="nibbler"/>
 		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/externlib/sandbox/main.cpp">
@@ -459,54 +519,6 @@
 			<Option target="nibbler"/>
 		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/jsoncpp/src/test_lib_json/main.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/Core.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/IWidget.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/stb_image.h">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/widget/AWidget.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/widget/WidgetChat.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/widget/WidgetExit.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/widget/WidgetLobby.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/include/widget/WidgetSnake.hpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/Core.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/imgui_demo.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/main.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/widget/AWidget.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/widget/WidgetChat.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/widget/WidgetExit.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/widget/WidgetLobby.cpp">
-			<Option target="nibbler"/>
-		</Unit>
-		<Unit filename="/Users/alexandreroulin/work/nibbler/menu/src/widget/WidgetSnake.cpp">
 			<Option target="nibbler"/>
 		</Unit>
 		<Unit filename="/Users/alexandreroulin/work/nibbler/CMakeLists.txt">
