--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,31 +4,8 @@ project(nibbler)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(class)
-include_directories(class/component)
-include_directories(class/events)
-include_directories(class/factory)
-include_directories(class/gui)
-include_directories(class/gui/widget)
-include_directories(class/KNU)
-include_directories(class/KNU/component)
-include_directories(class/KNU/entities)
-include_directories(class/KNU/events)
-include_directories(class/KNU/managers)
-include_directories(class/KNU/systems)
-include_directories(class/KNU/utils)
-include_directories(class/network)
-include_directories(class/systems)
-include_directories(externlib/commun)
-include_directories(externlib/display_sdl/include)
-include_directories(externlib/display_sfml/include)
-include_directories(externlib/sound_sdl/include)
-include_directories(externlib/sound_sfml/include)
-include_directories(imgui-sfml)
 include_directories(incs)
 include_directories(jsoncpp/include)
-include_directories(jsoncpp/include/json)
-include_directories(jsoncpp/src/lib_json)
-include_directories(jsoncpp/src/test_lib_json)
 
 add_executable(nibbler
         class/component/CollisionComponent.cpp
@@ -109,19 +86,6 @@ add_executable(nibbler
         class/systems/MotionSystem.hpp
         class/Univers.cpp
         class/Univers.hpp
-        externlib/commun/IDisplay.hpp
-        externlib/commun/ISound.hpp
-        externlib/display_sdl/include/DisplaySdl.hpp
-        externlib/display_sdl/src/DisplaySdl.cpp
-        externlib/display_sfml/include/DisplaySfml.hpp
-        externlib/display_sfml/src/DisplaySfml.cpp
-        externlib/sandbox/main.cpp
-        externlib/sound_sdl/include/SoundSdl.hpp
-        externlib/sound_sdl/src/main.cpp
-        externlib/sound_sdl/src/SoundSdl.cpp
-        externlib/sound_sfml/include/SoundSfml.hpp
-        externlib/sound_sfml/src/main.cpp
-        externlib/sound_sfml/src/SoundSfml.cpp
         imgui-sfml/imconfig.h
         imgui-sfml/imgui-SFML.cpp
         imgui-sfml/imgui-SFML.h
@@ -158,5 +122,4 @@ add_executable(nibbler
         jsoncpp/src/lib_json/json_writer.cpp
         jsoncpp/src/test_lib_json/jsontest.cpp
         jsoncpp/src/test_lib_json/jsontest.h
-        jsoncpp/src/test_lib_json/main.cpp
-        Time/src/main.cpp)
+        jsoncpp/src/test_lib_json/main.cpp)
