--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "jsoncpp"]
 	path = jsoncpp
 	url = https://github.com/open-source-parsers/jsoncpp
+[submodule "jsoncpp-cmake"]
+	path = jsoncpp-cmake
+	url = https://github.com/jwonders/jsoncpp-cmake
